--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
   <body>
     <div id="container"></div>
     <script type="module" src="/main.js"></script>
+    <script id="vertShader" type="x-shader/x-vertex">
+      uniform float map[length];
+      uniform float heightMul;
+      varying float height;
+
+      void main() {
+        height = position.z;
+        gl_Position = projectionMatrix * modelViewMatrix * vec4(position.x, position.y, (position.z * heightMul), 1.0);
+      }
+    </script>
+    <script id="fragShader" type="x-shader/x-vertex">
+      varying float height;
+
+      void main() {
+        vec3 water = smoothstep(0.01, 0.1, height) * vec3(0.0, 0.0, 1.0);
+        vec3 snow = smoothstep(0.2, 0.8, height) * vec3(1.0, 1.0, 1.0);
+        
+        gl_FragColor = vec4(water + snow, 1);
+      }
+    </script>
   </body>
 </html>
