--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="container"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="source/main.js"></script>
   </body>
 </html>
